feat: implementa integração com MercadoPago e refatora o fluxo de finalização da compra de ingressos
refactor: reorganiza prompts, docs e scripts do kit de especificações sob o diretório sdd-kit/ e implementa um script unificado sdd-run.sh para substituir gemini-run.sh e codex-run.sh.